[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gear/background/white-background.png" type="Texture" id=1]
[ext_resource path="res://entities/level_maker/level_maker.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/game_interface/game_interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/camera/camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/master_computer/master_computer.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/floor_5/floor_5.gd" type="Script" id=7]
[ext_resource path="res://entities/master_computer_2/master_computer_2.tscn" type="PackedScene" id=8]

[node name="floor_5" type="Node2D"]
script = ExtResource( 7 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 152, 88 )
texture = ExtResource( 1 )

[node name="level_maker" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 3, 0, 65536, 10, 0, 65537, 9, 0, 65538, 8, 0, 65539, 9, 0, 65540, 5, 0, 65541, 9, 0, 65542, 9, 0, 65543, 9, 0, 65544, 7, 0, 131072, 10, 0, 131073, 12, 0, 131074, 12, 0, 131075, 12, 0, 131076, 12, 0, 131077, 12, 0, 131078, 12, 0, 131079, 12, 0, 131080, 7, 0, 196608, 10, 0, 196609, 11, 0, 196610, 11, 0, 196611, 11, 0, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0, 196615, 11, 0, 196616, 7, 0, 262144, 17, 0, 262145, 14, 0, 262146, 14, 0, 262147, 14, 0, 262148, 14, 0, 262149, 14, 0, 262150, 14, 0, 262151, 14, 0, 262152, 15, 0 )

[node name="camera" parent="." instance=ExtResource( 5 )]

[node name="ysort" type="YSort" parent="."]

[node name="player" parent="ysort" instance=ExtResource( 4 )]
position = Vector2( 48, 96 )

[node name="master_computer" parent="ysort" instance=ExtResource( 6 )]
position = Vector2( 120, 64 )

[node name="master_computer_2" parent="ysort" instance=ExtResource( 8 )]
position = Vector2( 168, 64 )

[node name="game_interface" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="freeze_player" from="ysort/master_computer" to="." method="_on_master_computer_freeze_player"]
[connection signal="quest_done" from="ysort/master_computer" to="." method="_on_master_computer_quest_done"]
[connection signal="unfreeze_player" from="ysort/master_computer" to="." method="_on_master_computer_unfreeze_player"]
[connection signal="freeze_player" from="ysort/master_computer_2" to="." method="_on_master_computer_freeze_player"]
[connection signal="quest_done" from="ysort/master_computer_2" to="." method="_on_master_computer_2_quest_done"]
[connection signal="unfreeze_player" from="ysort/master_computer_2" to="." method="_on_master_computer_unfreeze_player"]
[connection signal="freeze" from="game_interface" to="." method="_on_game_interface_freeze"]
[connection signal="unfreeze" from="game_interface" to="." method="_on_game_interface_unfreeze"]
